Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
None
-
None
Description
In BrokerReplicator, there are a few places that it calls exchange->bind(). We're seeing some incorrect behavior during failover testing (e.g. an exchange shows that it has 5 bindings when there is really only 1) and we think we've narrowed it down to this. Instead of calling exchange->bind(), it should call queue->bind(). If you look at qpid::broker::Broker::createObject(), you'll see that this method calls queue->bind() to bind a queue to an exchange.
(Note that exchange->unbind() appears to be the correct operation for removing a binding, so this shouldn't need to be changed.)