Bug-869420 - QPID-4393: BrokerReplicator should call queue->bind, not exchange->bind

In BrokerReplicator, there are a few places that it calls
exchange->bind(). We're seeing some incorrect behavior during failover testing
(e.g. an exchange shows that it has 5 bindings when there is really only 1) and
we think we've narrowed it down to this. Instead of calling exchange->bind(), it
should call queue->bind(). If you look at qpid::broker::Broker::createObject(),
you'll see that this method calls queue->bind() to bind a queue to an exchange.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1401710 13f79535-47bb-0310-9956-ffa450edef68